opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
// Partial: Map Page Sidebar

.sidebar {
    width: 350px;
    background: $navbar-color;
    border-left: 1px solid $well-color;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    
    > div {
        height: 100%;
        overflow: auto;
    }
    .accordion {
        margin: 0;
    }
    .accordion-group {
        border-radius: 0;
        margin-bottom: 0;
        border: none;
        border-top: 1px solid darken($secondary-color, 25%);
    }
    .accordion-heading {
        background: $secondary-color;

        a {
            text-decoration: none;
            color: #FFF;
            box-shadow: 0 3px 6px darken($secondary-color, 15%);
            box-shadow: 0 3px 6px rgba(0,0,0,.2) inset;
            background: darken($secondary-color, 5%);
            padding: 15px;
            font-size: 1.6rem;
            font-weight: 700;

            &.collapsed {
                color: lighten($secondary-color, 35%);
                color: rgba(255,255,255,.5);
                box-shadow: none;
                background: $secondary-color;
            }

            &:hover {
                text-decoration: none;
                color: #FFF;
                box-shadow: 0 3px 6px darken($secondary-color, 15%);
                box-shadow: 0 3px 6px rgba(0,0,0,.2) inset;
                background: darken($secondary-color, 5%);
            }
        }
    }
    .accordion-inner {
        padding: 0;
    }

    .accordion-body {
        background: white;

        .accordion-body-buttons {
            padding: 10px 15px;
        }
        .tree-details-species {
            h3 {
                margin: 0;
                font-size: 2.1rem;
                line-height: 2.7rem;
            }
            h5 {
                font-size: 1.2rem;
                font-weight: 700;
                color: $subtext-color;
                margin-bottom: 15px;
            }
        }
        .field-view {
            margin-bottom: 10px;
        }
    }

    .chunk {
        list-style: none;
        padding: 5px 0 5px;
        margin: 0;
    }
}

#add-trunk-row {
    border-radius: 99px;
    padding: 2px 5px;
}

#details-form {
    padding: 15px 15px 10px;
    margin-bottom: 0;

    .benefit-values {
        margin: 0 -15px;

        .benefit-value-row {
            &:last-child {
                border: none;
            }
        }
    }
}

#move-plot-buttons {
    padding: 0 15px;

    > .btn {
        margin-bottom: 15px;
    }
}

#add-tree-address {
    width: 195px;
    font-size: 1.4rem;
}

.benefit-values {
    .benefit-value-title {
        background: $light-gray-color;
        color: darken($light-gray-color, 30%);
        font-size: 1.2rem;
        font-weight: 700;
        text-transform: uppercase;
        padding: 5px 15px;
    }
    .benefit-value-row {
        border-bottom: 1px solid $light-gray-color;
        padding: 15px;

        &:hover {
            background: lighten($light-gray-color, 5%);
        }
        &.resource-benefit {
            .benefit-icon {
                background: $secondary-color;
            }
            .benefit-label {
                color: $secondary-color;
            }
        }

        .benefit-icon {
            padding: 5px;
            background: $primary-color;
            width: 16px;
            height: 16px;
            border-radius: 999px;
            color: white;
            float: left;
            margin-right: 10px;
            margin-bottom: 10px;

            > i {
                margin-top: 1px;
                font-size: 1.2rem;            
            }
        }
        .benefit-label {
            font-weight: 400;
            font-size: 1.6rem;
            float: left;
            margin: 2px 0 0;
            line-height: 2.1rem;
            width: 275px;
            color: $primary-color;
        }
        .benefit-content {
            clear: both;
            margin: 0;
            font-size: 1.2rem;
            font-weight: 700;
            color: $subtext-color;
        }
    }
    .benefit-tree-count {
        padding: 15px;
        font-size: 1.2rem;
        font-style: italic;
        line-height: 1.6rem;
        color: $subtext-color;
    }
}

